Work on populating blog titles and paths on homepage.

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,7 +1,10 @@
-Posts <a href="/aboutme">About Me</a>
-<hr>
+<link rel="stylesheet" href="/css/blog.css" type="text/css" />
+
+<div id="navigation"><a href="/aboutme">About Me</a> <a href="/posts/post1">Post</a> Test
+<hr></div>
+
 
   <%= yield %>
 
 <hr>
-Footer
+<%= " test " * 4 %>
