--- a/views/aboutme.erb
+++ b/views/aboutme.erb
@@ -1,1 +1,11 @@
-This is all about me.
+<!DOCTYPE html>
+<html>
+<head>
+    <title>About Kate Fulton</title>
+</head>
+<body>
+  <h2>Hi. I'm Kate. It's nice to meet you.</h2>
+  <p>I'm an aspiting developer with a background in digital production and content development. I'm currently in <a href="http://adadevelopersacademy.org/" target="blank">Ada Developers Academy's</a> Cohort[1]. Before that I was making digital things for <a href="http://www.pbs.org/">PBS</a>. I like filling in crossword puzzles, eating bacon, thinking about robots, and talking sex-positivity.</p>
+  <p>Social Media links? grab images for them.</p>
+</body>
+</html>
