--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,23 @@
-This is the homepage!
-
-
-<%= ReadPosts.new %>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Welcome to my Blog.</title>
+</head>
+<body>
+  <h1>Welcome to my blog.</h1><h2>Happy you're here.</h2>
+  <p>Hi. My name is Kate. You can learn a few things about me <a href="/aboutme">here</a>. Or you can just start <a href="/posts/post1">reading</a>.</p>
+  <p>Here are things I need to do:
+    <ul>
+      <li>paragraph link treatment</li>
+      <li>highlight nav when you are in a section</li>
+      <li>think through site architecture</li>
+      <li>add some images/media</li>
+      <li>add next blog post/last blog post functionality</li>
+      <li>blog post home page? excerpts and continue reading link??</li>
+      <li>show/hide navigation?</li>
+      <li>scalability of images</li>
+      <%=   %>
+    <ul>
+  </p>
+</body>
+</html>
