--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -83,6 +83,9 @@ blockquote {
    color: white;
 }
 
+blockquote footer {
+  font-size: 1.25em;
+}
 img {
    background: #e9e9e9;
    margin-top: 1.5em;
