Add specific blog layout

--- a/views/posts/2014-09-24/post1.erb
+++ b/views/posts/2014-09-24/post1.erb
@@ -6,6 +6,7 @@
 <body id="blog">
   <section>
   <h3>This is a Blog Title</h3>
+  <p><%=@byline%></p>
 
   <p>Direct trade food truck Marfa polaroid, tattooed eiusmod Portland banjo heirloom tempor tofu eu sunt VHS. Artisan literally cliche fugiat letterpress. Single-origin coffee chambray voluptate craft beer commodo master cleanse. Nostrud pariatur cupidatat direct trade tousled, squid sapiente authentic master cleanse adipisicing. Cillum Banksy craft beer actually, VHS gluten-free sapiente reprehenderit deep v Blue Bottle plaid. Enim selfies Truffaut twee farm-to-table, veniam plaid authentic elit art party wolf beard irony. YOLO dolor tofu, flannel placeat gentrify authentic.</p>
 
@@ -18,10 +19,6 @@
   <p>+1 viral bespoke jean shorts, mumblecore chambray minim street art meh sriracha Truffaut selvage drinking vinegar occaecat. Intelligentsia deep v butcher put a bird on it ea ugh ullamco quinoa, 3 wolf moon before they sold out Marfa Neutra velit gentrify artisan. Kogi plaid raw denim, ad deserunt beard fingerstache. Locavore Neutra Tonx, High Life elit cliche eiusmod fugiat id banjo est VHS craft beer aesthetic. Organic eiusmod banh mi Pinterest gastropub delectus. Actually PBR&B Bushwick eu raw denim. Butcher ut labore adipisicing, American Apparel synth voluptate post-ironic narwhal skateboard art party mlkshk.</p>
 
   <p>Magna dolore chillwave blog disrupt. Chia plaid twee crucifix duis forage. Eu pug Odd Future fap next level. Semiotics authentic PBR&B, mumblecore bespoke put a bird on it crucifix sed. Actually Shoreditch Vice id letterpress synth, tofu High Life. Fingerstache keffiyeh synth, nulla fashion axe dolor mollit magna non anim Pitchfork stumptown Godard Blue Bottle distillery. McSweeney's kogi nesciunt fingerstache reprehenderit, VHS veniam Schlitz id nihil sartorial.</p>
-  <section>
-  <section>
-    <a href="http://www.google.com" class="btn">Previous Post</a>
-    <a href="http://www.google.com" class="btn">Next Post</a>
   </section>
 </body>
 </html>
