--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -1,6 +1,6 @@
 body {
    font-family: Helvetica, Arial, sans-serif;
-   font-size: 90%;
+   font-size: 80%;
    line-height: 1.5;
 }
 
@@ -13,7 +13,7 @@ h1, h2, h3 {
 }
 
 h1 {
-   font-size: 6em;
+   font-size: 4em;
    margin: 0;
 }
 
@@ -103,6 +103,17 @@ img {
     top: 0;
     left: 0;
     margin: 1em 3em 10px 0.5em;
+}
+
+.byline {
+  font-size: 1em;
+  font-style: italic;
+}
+
+.lastnextblog {
+  float: right;
+  margin-top: 2em;
+  margin-right: 4em;
 }
 
 .footer {
