--- a/views/blog_layout.erb
+++ b/views/blog_layout.erb
@@ -3,13 +3,16 @@
   <script src="/js/blog.js"></script>
 </head>
 
-<div class="nav">
+<section class="nav">
   <a href="/" id="homenav">HOME</a>&nbsp;&nbsp;&nbsp;<a href="/posts/2014-09-24/post1" id="blognav">BLOG</a>&nbsp;&nbsp;&nbsp;<a href="/aboutme" id="aboutnav">ME</a>
-</div>
+</section>
 <hr>
 
   <%= yield %>
 
-<div class="footer">
+
+<section class="byline"><a href="/aboutme">Kate Fulton</a></section>
+<section class="lastnextblog"><a href="">Last Post</a> | <a href="">Next Post</a></section>
+<section class="footer">
   <hr><%=DateTime.now.strftime("%B, %-d, %Y")%>&nbsp;&nbsp;&nbsp;&nbsp;Built with the power of <a href="http://adadevelopersacademy.org/" target="blank">ADA</a>
-</div>
+</section>
