--- a/views/index.erb
+++ b/views/index.erb
@@ -6,8 +6,15 @@
 <body id="home">
   <header>
     <h1>Welcome to my blog.</h1>
-    <h2>Happy you're here.</h2>
   </header>
+    <h2>Hi. I'm Kate. And welcome to my blog.
+      This is where I talk about my
+      experience learning to program.
+      It's frustrating and exhilirating.
+      Mind-bendy and challenging.
+      And full of natural highs that come from when the stuff I type
+      doesn't break my computer.
+    </h2>
 
     <% @posts.each do |post| %>
       <a href="<%= post.url %>"><%= post.title %></a><br/>
