Word on unique ids for posts and better title display.

--- a/views/aboutme.erb
+++ b/views/aboutme.erb
@@ -6,10 +6,14 @@
 <body id="about">
   <section>
     <h2>Hi. I'm Kate. Nice to meet you.</h2>
-    <p>Vegan biodiesel fanny pack elit ethical, stumptown 90's squid skateboard Helvetica mustache Austin organic +1. Fap try-hard cliche, American Apparel reprehenderit retro craft beer single-origin coffee squid. Yr enim laborum elit minim. +1 authentic try-hard bicycle rights, cliche bespoke fugiat. Schlitz messenger bag tofu, iPhone kogi anim jean shorts odio Truffaut nesciunt aliquip Pitchfork Wes Anderson esse Etsy. Sriracha wayfarers labore nesciunt. Portland next level small batch occaecat, accusamus aliquip plaid ennui mumblecore irure sed Pinterest pariatur semiotics ad.</p>
-    <div><a href="mailto:katesuzannefulton@gmail.com">Email me.</a> <a href="https://twitter.com/kate_fulton">Follow me.</a></div>
-    <!--<p>I'm an aspiring developer with a background in digital production and content development. I'm currently in <a href="http://adadevelopersacademy.org/" target="blank">Ada Developers Academy's</a> Cohort[1]. Before that I was making digital things for <a href="http://www.pbs.org/">PBS</a>. I like filling in crossword puzzles, eating bacon, thinking about robots, and talking sex-positivity.</p>
-    <p>Social Media links? grab images for them.</p>-->
+    <p>I'm a developer-in-training, currently a student in
+      <a href="http://adadevelopersacademy.org/" target="blank">Ada Developers
+        Academy's</a> Cohort[1]. Before that I was a multimedia producer at
+        <a href="http://www.pbs.org/">PBS</a>. I like doing things on computers.
+        I also like lots of other things. Here are just a few:
+        crossword puzzles, bacon, robots, gender-bending, and sex positivity.</p>
+    <div><a href="mailto:katesuzannefulton@gmail.com">Email me.</a>
+      <a href="https://twitter.com/kate_fulton">Follow me.</a></div>
   </section>
 </body>
 </html>
