--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -86,10 +86,18 @@ blockquote {
 blockquote footer {
   font-size: 1.25em;
 }
-img {
+
+section img {
    background: #e9e9e9;
    margin-top: 1.5em;
    width: 100%;
+}
+
+div img {
+  position: relative;
+  width: 200px;
+  margin: -1em 10em 0 0;
+  float: right;
 }
 
 .caption {
@@ -102,7 +110,7 @@ img {
     position: relative;
     top: 0;
     left: 0;
-    margin: 1em 3em 10px 0.5em;
+    margin: 1em 3em 1em 0.5em;
 }
 
 .byline {
