--- a/views/index.erb
+++ b/views/index.erb
@@ -13,12 +13,17 @@
       It's frustrating and exhilirating.
       Mind-bendy and challenging.
       And full of natural highs that come from when the stuff I type
-      doesn't break my computer.
-    </h2>
+      doesn't break my computer.</h2>
 
-    <% @posts.each do |post| %>
+    <div><img src="/images/computer.png" alt="computer"></div>
+
+
+    <section class="blog_list">
+      <p>Recent Posts:</p>
+      <% @posts.each do |post| %>
       <a href="<%= post.url %>"><%= post.title %></a><br/>
     <% end %>
+    </section>
 
 </body>
 </html>
