--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -1,10 +1,31 @@
+* {
+   -webkit-box-sizing: border-box;
+   -moz-box-sizing: border-box;
+   box-sizing: border-box;
+}
+
+/* Add the "group" class to a container element to contain it's floats (without needing to specify a fixed height). See: http://nicolasgallagher.com/micro-clearfix-hack. If you need a quick refresher on working with floats I recommend reading: http://css-tricks.com/all-about-floats. */
+.group:before,
+.group:after {
+   content:"";
+   display:table;
+}
+.group:after {
+   clear:both;
+}
+.group {
+   zoom:1; /* For IE 6/7 (trigger hasLayout) */
+}
+
+/* CSS BEGINS HERE */
+
 body {
    font-family: Helvetica, Arial, sans-serif;
    font-size: 80%;
    line-height: 1.5;
 }
 
-h1, h2, h3 {
+h1, h2, h3, h4 {
    font-family: Impact;
    line-height: 0.9;
    text-transform: uppercase;
@@ -23,6 +44,12 @@ h2 {
 
 h3 {
   font-size: 1.5em;
+}
+
+h4 {
+  font-size: 2em;
+  color: #8aff00;
+  margin: 0;
 }
 
 body#home a#homenav,
@@ -73,6 +100,11 @@ a.btn:hover {
    text-decoration: none;
 }
 
+.blog_list {
+  font-size: 125%;
+  margin: 0 0 0 .25em;
+}
+
 blockquote {
    margin: 0;
    padding: 3em;
@@ -96,7 +128,7 @@ section img {
 div img {
   position: relative;
   width: 200px;
-  margin: -1em 10em 0 0;
+  margin: 2em 10em 5em 14em;
   float: right;
 }
 
@@ -129,4 +161,17 @@ div img {
     font-size: .75em;
     color: #444;
     margin: 10em 3em 1em 0.5em;
+}
+
+/* MEDIA QUERIES BEGIN HERE*/
+@media screen and (min-width: 460px) {
+  .blog_list {
+      font-size: 100%;
+  }
+
+  div img {
+    position: relative;
+    width: 175px;
+    margin: .5em 2em 4em 4em;
+  }
 }
