--- a/views/index.erb
+++ b/views/index.erb
@@ -19,10 +19,11 @@
 
 
     <section class="blog_list">
-      <p>Recent Posts:</p>
+      <h4>Recent Posts:</h4>
       <% @posts.each do |post| %>
       <a href="<%= post.url %>"><%= post.title %></a><br/>
     <% end %>
+      <!-- View more posts option?-->
     </section>
 
 </body>
