Add excerpt text to  homepage.

--- a/views/aboutme.erb
+++ b/views/aboutme.erb
@@ -6,12 +6,12 @@
 <body id="about">
   <section>
     <h2>Hi. I'm Kate. Nice to meet you.</h2>
-    <p>I'm a developer-in-training, currently a student in
+    <p>A developer-in-training, I'm currently a student in
       <a href="http://adadevelopersacademy.org/" target="blank">Ada Developers
         Academy's</a> Cohort[1]. Before that I was a multimedia producer at
         <a href="http://www.pbs.org/">PBS</a>. I like doing things on computers.
-        I also like lots of other things. Here are just a few:
-        crossword puzzles, bacon, robots, gender-bending, and sex positivity.</p>
+        I also like a lot of other things like crossword puzzles, bacon, and
+        weird science.</p>
     <div><a href="mailto:katesuzannefulton@gmail.com">Email me.</a>
       <a href="https://twitter.com/kate_fulton">Follow me.</a></div>
   </section>
