--- a/views/posts/2014-09-24/post1.erb
+++ b/views/posts/2014-09-24/post1.erb
@@ -6,9 +6,8 @@
 <body id="blog">
   <section>
   <h3>This is a Blog Title</h3>
-  <p><%=@byline%></p>
 
-  <p>Direct trade food truck Marfa polaroid, tattooed eiusmod Portland banjo heirloom tempor tofu eu sunt VHS. Artisan literally cliche fugiat letterpress. Single-origin coffee chambray voluptate craft beer commodo master cleanse. Nostrud pariatur cupidatat direct trade tousled, squid sapiente authentic master cleanse adipisicing. Cillum Banksy craft beer actually, VHS gluten-free sapiente reprehenderit deep v Blue Bottle plaid. Enim selfies Truffaut twee farm-to-table, veniam plaid authentic elit art party wolf beard irony. YOLO dolor tofu, flannel placeat gentrify authentic.</p>
+  <p id="post_excerpt">Direct trade food truck Marfa polaroid, tattooed eiusmod Portland banjo heirloom tempor tofu eu sunt VHS. Artisan literally cliche fugiat letterpress. Single-origin coffee chambray voluptate craft beer commodo master cleanse. Nostrud pariatur cupidatat direct trade tousled, squid sapiente authentic master cleanse adipisicing. Cillum Banksy craft beer actually, VHS gluten-free sapiente reprehenderit deep v Blue Bottle plaid. Enim selfies Truffaut twee farm-to-table, veniam plaid authentic elit art party wolf beard irony. YOLO dolor tofu, flannel placeat gentrify authentic.</p>
 
   <p>Aesthetic Tonx ea, iPhone kale chips consectetur pour-over wolf ethical selvage accusamus. Etsy assumenda direct trade cardigan delectus. Echo Park vinyl kale chips, et non Schlitz drinking vinegar aesthetic normcore veniam. Minim Thundercats occaecat Marfa umami photo booth. Tousled bespoke 8-bit, gentrify banjo paleo authentic incididunt. Austin anim fixie, pork belly cillum vegan Cosby sweater lo-fi single-origin coffee PBR yr aute brunch sint. Hashtag plaid sriracha gastropub, eu Banksy scenester.</p>
 
