--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -101,8 +101,9 @@ a.btn:hover {
 }
 
 .blog_list {
+  position: relative;
   font-size: 125%;
-  margin: 0 0 0 .25em;
+  margin: 1em 0 0 1em;
 }
 
 blockquote {
@@ -128,8 +129,8 @@ section img {
 div img {
   position: relative;
   width: 200px;
-  margin: 2em 10em 5em 14em;
-  float: right;
+  margin: 2em 10em 5em 6em;
+  float: left;
 }
 
 .caption {
@@ -160,18 +161,32 @@ div img {
     text-align: right;
     font-size: .75em;
     color: #444;
-    margin: 10em 3em 1em 0.5em;
+    margin: 15em 3em 1em 0.5em;
 }
 
 /* MEDIA QUERIES BEGIN HERE*/
-@media screen and (min-width: 460px) {
+@media screen and (min-width: 500px) {
   .blog_list {
       font-size: 100%;
+      margin: 1em 0 0 25em;
   }
 
   div img {
     position: relative;
-    width: 175px;
+    width: 200px;
+    margin: .5em 2em 4em 4em;
+  }
+}
+
+@media screen and (min-width: 550px) {
+  .blog_list {
+      font-size: 100%;
+      margin: 1em 0 0 25em;
+  }
+
+  div img {
+    position: relative;
+    width: 200px;
     margin: .5em 2em 4em 4em;
   }
 }
