--- a/views/posts/2014-09-25/An_Instance_of_a_Class.erb
+++ b/views/posts/2014-09-25/An_Instance_of_a_Class.erb
@@ -8,7 +8,7 @@
   <section>
     <h3>This is the second post title. It is a much much longer title.</h3>
 
-    <p>90's duis banjo Echo Park lo-fi, enim blog distillery biodiesel. You probably haven't heard of them pour-over ad, meh roof party cornhole plaid Carles retro qui authentic proident veniam. You probably haven't heard of them labore butcher Brooklyn, keytar gluten-free proident fashion axe iPhone minim before they sold out. Narwhal Pitchfork Wes Anderson exercitation, DIY brunch tousled occaecat swag kale chips qui keytar authentic Pinterest. Plaid beard American Apparel irony actually, Schlitz Blue Bottle. Schlitz typewriter organic sriracha, pop-up Banksy plaid Vice. Thundercats elit +1, raw denim cardigan PBR&B fingerstache kale chips consectetur Kickstarter deserunt kitsch McSweeney's banjo.</p>
+    <p id="post_excerpt">90's duis banjo Echo Park lo-fi, enim blog distillery biodiesel. You probably haven't heard of them pour-over ad, meh roof party cornhole plaid Carles retro qui authentic proident veniam. You probably haven't heard of them labore butcher Brooklyn, keytar gluten-free proident fashion axe iPhone minim before they sold out. Narwhal Pitchfork Wes Anderson exercitation, DIY brunch tousled occaecat swag kale chips qui keytar authentic Pinterest. Plaid beard American Apparel irony actually, Schlitz Blue Bottle. Schlitz typewriter organic sriracha, pop-up Banksy plaid Vice. Thundercats elit +1, raw denim cardigan PBR&B fingerstache kale chips consectetur Kickstarter deserunt kitsch McSweeney's banjo.</p>
 
     <img src="/images/adalovelace.jpg" alt="Ada Lovelace">
     <div class="caption">Ada Lovelace</div>
