--- a/views/aboutme.erb
+++ b/views/aboutme.erb
@@ -1,8 +1,3 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>About Kate Fulton</title>
-</head>
 <body id="about">
   <section>
     <h2>Hi. I'm Kate. Nice to meet you.</h2>
@@ -10,10 +5,8 @@
       <a href="http://adadevelopersacademy.org/" target="blank">Ada Developers
         Academy's</a> Cohort[1]. Before that I was a multimedia producer at
         <a href="http://www.pbs.org/">PBS</a>. I like doing things on computers.
-        I also like a lot of other things like crossword puzzles, bacon, and
-        weird science.</p>
+        I also like doing a lot of other things.</p>
     <div><a href="mailto:katesuzannefulton@gmail.com">Email me.</a>
       <a href="https://twitter.com/kate_fulton">Follow me.</a></div>
   </section>
 </body>
-</html>
