--- a/views/blog_layout.erb
+++ b/views/blog_layout.erb
@@ -1,11 +1,14 @@
+<!DOCTYPE html>
+<html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/css/blog.css" type="text/css" />
   <script src="/js/blog.js"></script>
+  <title>Kate Fulton's Blog</title>
 </head>
 
 <section class="nav">
-  <a href="/" id="homenav">HOME</a>&nbsp;&nbsp;&nbsp;<a href="/posts/2014-09-24/post1" id="blognav">BLOG</a>&nbsp;&nbsp;&nbsp;<a href="/aboutme" id="aboutnav">ME</a>
+  <a href="/" id="homenav">HOME</a>&nbsp;&nbsp;&nbsp;<a href="/posts/2014-09-29/technology_is_magic" id="blognav">BLOG</a>&nbsp;&nbsp;&nbsp;<a href="/aboutme" id="aboutnav">ME</a>
 </section>
 <hr>
 
@@ -17,3 +20,4 @@
 <section class="footer">
   <hr><%=DateTime.now.strftime("%B, %-d, %Y")%>&nbsp;&nbsp;&nbsp;&nbsp;Built with the power of <a href="http://adadevelopersacademy.org/" target="blank">ADA</a>
 </section>
+</html>
