--- a/views/index.erb
+++ b/views/index.erb
@@ -1,18 +1,12 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Welcome to my Blog.</title>
-</head>
 <body id="home">
   <header>
     <h1>Welcome to my blog.</h1>
   </header>
     <h2>Hi. I'm Kate. And welcome to my blog.
-      This is where I talk about my
-      experience learning to program.
+      This is where I talk about my experience learning to program.
       It's frustrating and exhilirating.
       Mind-bendy and challenging.
-      And full of natural highs that come from when the stuff I type
+      And full of the natural highs that come from when the stuff I type
       doesn't break my computer.</h2>
 
     <div><img src="/images/black_laptop.png" alt="computer"></div>
@@ -25,6 +19,4 @@
         <%= post.excerpt %>... <a href="<%= post.url %>">More</a><br/><br/>
       <% end %>
     </section>
-
 </body>
-</html>
