--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,16 +1,21 @@
+<!DOCTYPE html>
+<html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/css/blog.css" type="text/css" />
   <script src="/js/blog.js"></script>
+  <title>Kate Fulton's Blog</title>
 </head>
+<body>
+  <div class="nav">
+    <a href="/" id="homenav">HOME</a>&nbsp;&nbsp;&nbsp;<a href="/posts/2014-09-29/technology_is_magic" id="blognav">BLOG</a>&nbsp;&nbsp;&nbsp;<a href="/aboutme" id="aboutnav">ME</a>
+  </div>
+  <hr>
 
-<div class="nav">
-  <a href="/" id="homenav">HOME</a>&nbsp;&nbsp;&nbsp;<a href="/posts/2014-09-24/post1" id="blognav">BLOG</a>&nbsp;&nbsp;&nbsp;<a href="/aboutme" id="aboutnav">ME</a>
-</div>
-<hr>
+    <%= yield %>
 
-  <%= yield %>
-
-<div class="footer">
-  <hr><%=DateTime.now.strftime("%B, %-d, %Y")%>&nbsp;&nbsp;&nbsp;&nbsp;Built with the power of <a href="http://adadevelopersacademy.org/" target="blank">ADA</a>
-</div>
+  <div class="footer">
+    <hr><%=DateTime.now.strftime("%B, %-d, %Y")%>&nbsp;&nbsp;&nbsp;&nbsp;Built with the power of <a href="http://adadevelopersacademy.org/" target="blank">ADA</a>
+  </div>
+</body>
+</html>
