Fix nav highlight, nested blog layout

--- a/views/aboutme.erb
+++ b/views/aboutme.erb
@@ -1,4 +1,4 @@
-<body id="about">
+<body class="about">
   <section>
     <h2>Hi. I'm Kate. Nice to meet you.</h2>
     <p>A developer-in-training, I'm currently a student in
