--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -1,57 +1,48 @@
-* {
-   -webkit-box-sizing: border-box;
-   -moz-box-sizing: border-box;
-   box-sizing: border-box;
-}
-
-/* CSS BEGINS HERE */
-
 body {
    font-family: Helvetica, Arial, sans-serif;
-   font-size: 80%;
-   line-height: 1.5;
+   line-height: 1.5em;
+   font-size: 100%;
+}
+
+section {
+  font-size: .75em;
+  line-height: 1.4em;
 }
 
 h1, h2, h3, h4, h5 {
    font-family: Impact;
-   line-height: 0.9;
+   line-height: 1em;
    text-transform: uppercase;
    text-align: left;
    color: #444;
 }
 
 h1 {
-   font-size: 4em;
+   font-size: 3em;
    margin: 0;
 }
 
 h2 {
-   font-size: 2em;
-}
-
-h3 {
   font-size: 1.5em;
 }
 
-h4 {
+h3 {
   font-size: 2em;
   color: #8aff00;
   margin: 0;
 }
 
-h5 {
-  font-size: 1em;
+h4 {
+  font-size: 1.25em;
 }
 
-body#home a#homenav,
-body#blog a#blognav,
-body#about a#aboutnav {
+.nav .selected {
   background: #8aff00;
 }
 
-a#homenav,
-a#blognav,
-a#aboutnav {
+.homenav,
+.blognav,
+.aboutnav {
     color: #444;
     text-decoration: none;
     font-weight: normal;
@@ -73,28 +64,39 @@ a:active {
     background: #8aff00;
 }
 
-a.btn {
-   display: inline-block;
-   text-transform: uppercase;
-   background: #8aff00;
-   color: #444;
-   margin: 1em;
-   padding: 1em 2em;
-   -webkit-border-radius: 1em;
-      -moz-border-radius: 1em;
-           border-radius: 1em;
+.nav {
+  position: relative;
+  display: inline-block;
+  font-size: .75em;
 }
 
-a.btn:hover {
-   background: #444;
-   color: #8aff00;
-   text-decoration: none;
+.horizontal-list {
+  padding: 0;
+  margin: 0;
+}
+
+.horizontal-list li {
+  display: inline-block;
+  list-style: none;
+  padding: 0 .6em 0 0;
+}
+
+.footer {
+    text-align: right;
+    font-size: .5em;
+    color: #444;
+    margin: 10em 0 0 0;
 }
 
 .blog_list {
   position: relative;
-  font-size: 100%;
   margin: 1em 0 0 1em;
+}
+
+.home_image {
+  position: relative;
+  width: 175px;
+  margin: 0 0 2em 5em;
 }
 
 blockquote {
@@ -117,54 +119,43 @@ section img {
    width: 100%;
 }
 
-div img {
-  position: relative;
-  width: 200px;
-  margin: 2em 10em 5em 6em;
-  float: left;
-}
-
 .caption {
   font-size: .75em;
   color: #8aff00;
   margin-bottom: 1.5em;
 }
 
-.nav {
-    position: relative;
-    top: 0;
-    left: 0;
-    margin: 1em 3em 1em 0.5em;
+.byline {
+  font-style: italic;
 }
 
-.byline {
-  font-size: 1em;
-  font-style: italic;
+.blog_footer {
+  font-size: .75em;
+  margin: 5em 0 0 0;
 }
 
 .lastnextblog {
   float: right;
-  margin-top: 2em;
-  margin-right: 4em;
-}
-
-.footer {
-    text-align: right;
-    font-size: .75em;
-    color: #444;
-    margin: 15em 3em 1em 0.5em;
 }
 
 /* MEDIA QUERIES BEGIN HERE*/
-@media screen and (min-width: 490px) {
-  .blog_list {
-      font-size: 100%;
-      margin: 1em 0 0 25em;
+
+@media screen and (min-width: 550px) {
+  .home_image {
+    width: 200px;
+    margin: 0 2em 0 0;
+    height: 100%;
   }
 
-  div img {
-    position: relative;
-    width: 200px;
-    margin: .5em 2em 4em 4em;
+  .blog_list {
+    width: 300px;
+  }
+
+  .home {
+    float: left;
+  }
+
+  .footer {
+    clear: both;
   }
 }
