--- a/views/index.erb
+++ b/views/index.erb
@@ -1,22 +1,23 @@
-<body id="home">
-  <header>
+  <hgroup>
     <h1>Welcome to my blog.</h1>
-  </header>
     <h2>Hi. I'm Kate. And welcome to my blog.
       This is where I talk about my experience learning to program.
       It's frustrating and exhilirating.
       Mind-bendy and challenging.
       And full of the natural highs that come from when the stuff I type
-      doesn't break my computer.</h2>
+      doesn't break my computer.
+    </h2>
+  </hgroup>
 
-    <div><img src="/images/black_laptop.png" alt="computer"></div>
 
+  <section class="home_image home">
+    <img src="/images/black_laptop_white.png" alt="computer">
+  </section>
 
-    <section class="blog_list">
-      <h4>Recent Posts:</h4>
+  <section class="blog_list home">
+      <hgroup><h3>Recent Posts</h3></hgroup>
       <% @posts.each do |post| %>
         <a href="<%= post.url %>"><%= post.title%></a><br/>
         <%= post.excerpt %>... <a href="<%= post.url %>">More</a><br/><br/>
       <% end %>
-    </section>
-</body>
+  </section>
