--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,21 +1,31 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="/css/blog.css" type="text/css" />
-  <script src="/js/blog.js"></script>
-  <title>Kate Fulton's Blog</title>
-</head>
-<body>
-  <div class="nav">
-    <a href="/" id="homenav">HOME</a>&nbsp;&nbsp;&nbsp;<a href="/posts/2014-09-29/technology_is_magic" id="blognav">BLOG</a>&nbsp;&nbsp;&nbsp;<a href="/aboutme" id="aboutnav">ME</a>
-  </div>
-  <hr>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="/css/blog.css" type="text/css" />
+    <script src="/js/blog.js"></script>
+    <title>Kate's Ada Blog</title>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <ul class="nav horizontal-list">
+          <li><a href="/" class="homenav <%="selected" if @current_page == :home %>">HOME</a></li>
+          <li><a href="/bloglanding" class="blognav <%="selected" if @current_page == :blog %>">BLOG</a></li>
+          <li><a href="/aboutme" class="aboutnav <%="selected" if @current_page == :about %>">ME</a></li>
+        </ul>
+      </nav>
+      <hr>
+    </header>
 
-    <%= yield %>
+      <%= yield %>
 
-  <div class="footer">
-    <hr><%=DateTime.now.strftime("%B, %-d, %Y")%>&nbsp;&nbsp;&nbsp;&nbsp;Built with the power of <a href="http://adadevelopersacademy.org/" target="blank">ADA</a>
-  </div>
-</body>
+    <footer class="footer">
+      <hr>
+      <ul class="horizontal-list">
+        <li><%=DateTime.now.strftime("%B, %-d, %Y")%></li>
+        <li>Built with the power of
+          <a href="http://adadevelopersacademy.org/" target="blank">ADA</a></li>
+    </footer>
+  </body>
 </html>
