--- a/views/posts/2014-09-28/Thoughts_on_Strings.erb
+++ b/views/posts/2014-09-28/Thoughts_on_Strings.erb
@@ -1,6 +1,6 @@
-<body id="blog">
+<body class="blog">
   <section>
-    <h3>Blog Post Title.</h3>
+    <h4>Blog Post Title.</h4>
 
     <p id="post_excerpt">Incididunt nisi organic fap, quinoa lo-fi before they sold out selvage gluten-free dolore ugh. Try-hard cliche American Apparel ullamco tote bag aesthetic vero meggings. Banh mi deserunt fixie anim semiotics, cray four loko Thundercats disrupt accusamus butcher delectus crucifix. Aesthetic chia twee Odd Future art party pour-over, commodo magna Intelligentsia High Life Blue Bottle officia gentrify. Keffiyeh placeat normcore, Williamsburg forage fingerstache est gluten-free +1 delectus excepteur qui nulla. Assumenda Bushwick cred, American Apparel Kickstarter artisan Banksy yr before they sold out crucifix elit Thundercats messenger bag kitsch. Organic pariatur roof party tofu et elit.</p>
 
