--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -2,6 +2,7 @@ body {
    font-family: Helvetica, Arial, sans-serif;
    line-height: 1.5em;
    font-size: 100%;
+   margin: .25em 1em;
 }
 
 section {
@@ -10,7 +11,7 @@ section {
 }
 
 h1, h2, h3, h4, h5 {
-   font-family: Impact;
+   font-family: Impact, "Oswald";
    line-height: 1em;
    text-transform: uppercase;
    text-align: left;
@@ -34,6 +35,7 @@ h3 {
 
 h4 {
   font-size: 1.25em;
+  line-height: 3em;
 }
 
 .nav .selected {
