Delete extra layout.erb in public/css folder

--- a/views/aboutme.erb
+++ b/views/aboutme.erb
@@ -1,12 +1,14 @@
-<body class="about">
   <section>
     <h2>Hi. I'm Kate. Nice to meet you.</h2>
     <p>A developer-in-training, I'm currently a student in
       <a href="http://adadevelopersacademy.org/" target="blank">Ada Developers
-        Academy's</a> Cohort[1]. Before that I was a multimedia producer at
-        <a href="http://www.pbs.org/">PBS</a>. I like doing things on computers.
-        I also like doing a lot of other things.</p>
+        Academy's</a> Cohort[1].
+        Before that I was a multimedia producer at
+        <a href="http://www.pbs.org/">PBS</a> where I learned many animal factoids
+        while working on my primary property <em>Nature</em>.
+        I like doing things on computers.
+        I also like doing a lot of other things.
+        Here are a few: </p>
     <div><a href="mailto:katesuzannefulton@gmail.com">Email me.</a>
       <a href="https://twitter.com/kate_fulton">Follow me.</a></div>
   </section>
-</body>
