--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href='http://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="/css/resets.css" type="text/css" />
     <link rel="stylesheet" href="/css/blog.css" type="text/css" />
     <script src="/js/blog.js"></script>
     <title>Kate's Ada Blog</title>
