--- a/views/index.erb
+++ b/views/index.erb
@@ -11,7 +11,8 @@
 
 
   <section class="home_image home">
-    <img src="/images/black_laptop_white.png" alt="computer">
+    <section class="star"><img src="/images/green_star_white.png" alt="star"></section>
+    <section class="laptop"><img src="/images/black_laptop_trans.gif" alt="computer"></section>
   </section>
 
   <section class="blog_list home">
