--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -35,7 +35,7 @@ h3 {
 
 h4 {
   font-size: 1.25em;
-  line-height: 3em;
+  margin: 0 0 1em 0;
 }
 
 .nav .selected {
@@ -96,13 +96,26 @@ a:active {
 }
 
 .home_image {
-  position: relative;
-  width: 175px;
   margin: 0 0 2em 5em;
+  width: 175px;
+  position: relative;
+  left: 0;
+  top: 0;
+}
+
+.laptop {
+  position:absolute;
+  top: 5em;
+}
+
+.star {
+  width: 250px;
+  position:relative;
+  right: 2em;
 }
 
 blockquote {
-   margin: 0;
+   margin: 1.5em 0;
    padding: 3em;
    background: #444;
    font-family: georgia;
@@ -145,7 +158,7 @@ section img {
 @media screen and (min-width: 550px) {
   .home_image {
     width: 200px;
-    margin: 0 2em 0 0;
+    margin: 0 4em 0 0;
     height: 100%;
   }
 
