--- a/views/posts/2014-09-25/An_Instance_of_a_Class.erb
+++ b/views/posts/2014-09-25/An_Instance_of_a_Class.erb
@@ -1,12 +1,10 @@
-<body class="blog">
-  <section>
-    <h4>This is the second post title. It is a much much longer title.</h4>
+<article>
+  <hgroup>
+    <h2>BLOG TITLE</h2>
+  </hgroup>
+    <section id="post_excerpt">
+        Photo booth beard try-hard ullamco Austin normcore eiusmod, qui ennui pickled whatever. Brunch twee Thundercats, single-origin coffee delectus shabby chic Brooklyn dolore Tumblr. Enim est PBR&B roof party Godard. Cliche narwhal paleo mumblecore, occaecat kitsch fixie quis nisi. Mixtape sriracha letterpress PBR. Adipisicing fixie Williamsburg incididunt sint gentrify church-key odio, Cosby sweater quinoa shabby chic esse. Yr fixie scenester, Schlitz aute placeat meggings.</section>
 
-    <p id="post_excerpt">90's duis banjo Echo Park lo-fi, enim blog distillery biodiesel. You probably haven't heard of them pour-over ad, meh roof party cornhole plaid Carles retro qui authentic proident veniam. You probably haven't heard of them labore butcher Brooklyn, keytar gluten-free proident fashion axe iPhone minim before they sold out. Narwhal Pitchfork Wes Anderson exercitation, DIY brunch tousled occaecat swag kale chips qui keytar authentic Pinterest. Plaid beard American Apparel irony actually, Schlitz Blue Bottle. Schlitz typewriter organic sriracha, pop-up Banksy plaid Vice. Thundercats elit +1, raw denim cardigan PBR&B fingerstache kale chips consectetur Kickstarter deserunt kitsch McSweeney's banjo.</p>
-
-    <img src="/images/adalovelace.jpg" alt="Ada Lovelace">
-    <div class="caption">Ada Lovelace</div>
-
-    <p>Photo booth beard try-hard ullamco Austin normcore eiusmod, qui ennui pickled whatever. Brunch twee Thundercats, single-origin coffee delectus shabby chic Brooklyn dolore Tumblr. Enim est PBR&B roof party Godard. Cliche narwhal paleo mumblecore, occaecat kitsch fixie quis nisi. Mixtape sriracha letterpress PBR. Adipisicing fixie Williamsburg incididunt sint gentrify church-key odio, Cosby sweater quinoa shabby chic esse. Yr fixie scenester, Schlitz aute placeat meggings.</p>
-  </section>
-</body>
+    <section><img src="/images/adalovelace.jpg" alt="Ada Lovelace">
+    <div class="caption">Ada Lovelace</div></section>
+</article>
