--- a/views/posts/2014-09-29/Thinking_Through_Algorithms.erb
+++ b/views/posts/2014-09-29/Thinking_Through_Algorithms.erb
@@ -1,8 +1,8 @@
-<body id="blog">
-  <section>
-  <h4>Minipost: HTML</h4>
-  <p id="post_excerpt">Test here Magna dolore chillwave blog disrupt. Chia plaid twee crucifix duis forage. Eu pug Odd Future fap next lev veniam heirloom mumblecore scenester exercitation. Chillwave photo booth sartorial messenger bag swag, cred locavore nostrud ethical Schlitz slow-carb deep v. Pork belly tousled paleo occaecat raw denim. Est chambray iPhone ea. XOXO Kickstarter American Apparel, wayfarers vegan dolore magna chia nihil. Velit meh cillum authentic, magna plaid twee PBR&B voluptate.</p>
-  <blockquote>There's a lot of magic going on here.<footer></footer></blockquote>
+<article>
+  <hgroup>
+    <h2>BLOG TITLE</h2>
+  </hgroup>
+    <section id="post_excerpt">Incididunt nisi organic fap, quinoa lo-fi before they sold out selvage gluten-free dolore ugh. Try-hard cliche American Apparel ullamco tote bag aesthetic vero meggings. Banh mi deserunt fixie anim semiotics, cray four loko Thundercats disrupt accusamus butcher delectus crucifix. Aesthetic chia twee Odd Future art party pour-over, commodo magna Intelligentsia High Life Blue Bottle officia gentrify. Keffiyeh placeat normcore, Williamsburg forage fingerstache est gluten-free +1 delectus excepteur qui nulla. Assumenda Bushwick cred, American Apparel Kickstarter artisan Banksy yr before they sold out crucifix elit Thundercats messenger bag kitsch. Organic pariatur roof party tofu et elit.</section>
 
-  </section>
-</body>
+    <section><blockquote>There's a lot of magic going on here.<footer></footer></blockquote></section>
+</article>
