Try with transparent png

--- a/views/index.erb
+++ b/views/index.erb
@@ -12,7 +12,7 @@
 
   <section class="home_image home">
     <section class="star"><img src="/images/green_star_white.png" alt="star"></section>
-    <section class="laptop"><img src="/images/black_laptop_trans.gif" alt="computer"></section>
+    <section class="laptop"><img src="/images/black_laptop_trans.png" alt="computer"></section>
   </section>
 
   <section class="blog_list home">
