--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -6,7 +6,7 @@ body {
 }
 
 section {
-  font-size: .75em;
+  font-size: .70em;
   line-height: 1.4em;
 }
 
@@ -25,6 +25,7 @@ h1 {
 
 h2 {
   font-size: 1.5em;
+  margin: .5em 0;
 }
 
 h3 {
@@ -35,7 +36,7 @@ h3 {
 
 h4 {
   font-size: 1.25em;
-  margin: 0 0 1em 0;
+  margin: 1em 0;
 }
 
 .nav .selected {
@@ -103,19 +104,21 @@ a:active {
   top: 0;
 }
 
-.laptop {
+/*.laptop {
   position:absolute;
   top: 5em;
-}
+  background-color: transparent;
+  background: none;
+}*/
 
-.star {
+/*.star {
   width: 250px;
   position:relative;
   right: 2em;
-}
+}*/
 
 blockquote {
-   margin: 1.5em 0;
+   margin: 1em 0;
    padding: 3em;
    background: #444;
    font-family: georgia;
@@ -125,7 +128,9 @@ blockquote {
 }
 
 blockquote footer {
-  font-size: 1.25em;
+  font-size: .85em;
+  margin: .5em 0;
+  font-weight: bold;
 }
 
 section img {
@@ -145,7 +150,7 @@ section img {
 }
 
 .blog_footer {
-  font-size: .75em;
+  font-size: .6em;
   margin: 5em 0 0 0;
 }
 
@@ -153,6 +158,12 @@ section img {
   float: right;
 }
 
+.disabled {
+  pointer-events: none;
+  cursor: default;
+  opacity: .5;
+  filter: alpha(opacity=50);
+}
 /* MEDIA QUERIES BEGIN HERE*/
 
 @media screen and (min-width: 550px) {
