--- a/views/blog_layout.erb
+++ b/views/blog_layout.erb
@@ -4,6 +4,6 @@
 
 <ul class="horizontal-list blog_footer">
   <li class="byline">by <a href="/aboutme">Kate Fulton</a></li>
-  <li class="lastnextblog"><a href="<%= Post.sort_date[@current_index - 1].url if @current_index > 0 %>">Last Post</a> |
-    <a href="<%= Post.sort_date[@current_index + 1].url if @current_index <= (Post.all.length) %>">Next Post</a></li>
+  <li class="lastnextblog"><span class="<%="disabled" if @current_index == 0 %>"><a href="<%= Post.last_blog %>">Last Post</a></span> |
+    <span class="<%="disabled" if @current_index == (Post.all.length - 1) %>"><a href="<%= Post.next_blog %>">Next Post</a></span></li>
 </ul>
