Add jQuery table functionality.

--- a/views/posts/2014-09-27/Class_Methods.erb
+++ b/views/posts/2014-09-27/Class_Methods.erb
@@ -2,5 +2,33 @@
   <hgroup>
     <h2>BLOG TITLE</h2>
   </hgroup>
-    <section id="post_excerpt">Incididunt nisi organic fap, quinoa lo-fi before they sold out selvage gluten-free dolore ugh. Try-hard cliche American Apparel ullamco tote bag aesthetic vero meggings. Banh mi deserunt fixie anim semiotics, cray four loko Thundercats disrupt accusamus butcher delectus crucifix. Aesthetic chia twee Odd Future art party pour-over, commodo magna Intelligentsia High Life Blue Bottle officia gentrify. Keffiyeh placeat normcore, Williamsburg forage fingerstache est gluten-free +1 delectus excepteur qui nulla. Assumenda Bushwick cred, American Apparel Kickstarter artisan Banksy yr before they sold out crucifix elit Thundercats messenger bag kitsch. Organic pariatur roof party tofu et elit.</section>
+  <section id="post_excerpt">Incididunt nisi organic fap, quinoa lo-fi before they sold out selvage gluten-free dolore ugh. Try-hard cliche American Apparel ullamco tote bag aesthetic vero meggings. Banh mi deserunt fixie anim semiotics, cray four loko Thundercats disrupt accusamus butcher delectus crucifix. Aesthetic chia twee Odd Future art party pour-over, commodo magna Intelligentsia High Life Blue Bottle officia gentrify. Keffiyeh placeat normcore, Williamsburg forage fingerstache est gluten-free +1 delectus excepteur qui nulla. Assumenda Bushwick cred, American Apparel Kickstarter artisan Banksy yr before they sold out crucifix elit Thundercats messenger bag kitsch. Organic pariatur roof party tofu et elit.</section>
+
+
+  <section class="full_table">
+    <div class="table-toggle">Hide Table</div>
+    <table class="table">
+      <tr class="table-header">
+        <td>Block</td>
+        <td>Inline</td>
+        <td>Inline</td>
+      </tr>
+      <tr>
+        <td>Content that has its own line.</td>
+        <td>Content that is inline, part of a larger block.</td>
+        <td>Content that is inline, part of a larger block.</td>
+      </tr>
+      <tr>
+        <td>Content that has its own line.</td>
+        <td>Content that is inline, part of a larger block.</td>
+        <td>Content that is inline, part of a larger block.</td>
+      </tr>
+      <tr>
+        <td>Content that has its own line.</td>
+        <td>Content that is inline, part of a larger block.</td>
+        <td>Content that is inline, part of a larger block.</td>
+      </tr>
+    </table>
+  </section>
+  <section>Incididunt nisi organic fap, quinoa lo-fi before they sold out selvage gluten-free dolore ugh. Try-hard cliche American Apparel ullamco tote bag aesthetic vero meggings. Banh mi deserunt fixie anim semiotics, cray four loko Thundercats disrupt accusamus butcher delectus crucifix. Aesthetic chia twee Odd Future art party pour-over, commodo magna Intelligentsia High Life Blue Bottle officia gentrify. Keffiyeh placeat normcore, Williamsburg forage fingerstache est gluten-free +1 delectus excepteur qui nulla. Assumenda Bushwick cred, American Apparel Kickstarter artisan Banksy yr before they sold out crucifix elit Thundercats messenger bag kitsch. Organic pariatur roof party tofu et elit.</section>
 </article>
