--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -8,6 +8,8 @@ body {
 section {
   font-size: .70em;
   line-height: 1.4em;
+  display: block;
+  width: 100%;
 }
 
 h1, h2, h3, h4, h5 {
@@ -88,7 +90,7 @@ a:active {
     text-align: right;
     font-size: .5em;
     color: #444;
-    margin: 10em 0 0 0;
+    margin: 5em 0 0 0;
 }
 
 .blog_list {
@@ -97,25 +99,10 @@ a:active {
 }
 
 .home_image {
-  margin: 0 0 2em 5em;
+  margin: 0 0 3em 8em;
   width: 175px;
   position: relative;
-  left: 0;
-  top: 0;
 }
-
-/*.laptop {
-  position:absolute;
-  top: 5em;
-  background-color: transparent;
-  background: none;
-}*/
-
-/*.star {
-  width: 250px;
-  position:relative;
-  right: 2em;
-}*/
 
 blockquote {
    margin: 1em 0;
@@ -143,6 +130,9 @@ section img {
   font-size: .75em;
   color: #8aff00;
   margin-bottom: 1.5em;
+  background-color: #444;
+  margin-right: 40%;
+  padding: .5em;
 }
 
 .byline {
@@ -151,7 +141,7 @@ section img {
 
 .blog_footer {
   font-size: .6em;
-  margin: 5em 0 0 0;
+  margin: 2em 0 0 0;
 }
 
 .lastnextblog {
@@ -164,6 +154,58 @@ section img {
   opacity: .5;
   filter: alpha(opacity=50);
 }
+
+.contact {
+  margin: 5em 0 0 0;
+}
+
+.full_table {
+  width: 100%;
+  margin: 2em 0 2em 0;
+}
+
+.table-header {
+  color: #8aff00;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+td {
+  padding: 2em 2em 2em 2em;
+  border: 1px solid #ffffff;
+  font-size: 1em;
+}
+
+.table {
+  background-color: #444;
+  color: white;
+  width:100%;
+}
+
+.table-toggle {
+  font-weight: bold;
+  text-align: right;
+}
+
+/*
+.table:after {
+  clear:both;
+}
+*/
+
+.hide {
+  display:none;
+}
+
+/*.btn {
+   display: inline-block;
+   text-transform: uppercase;
+   background: #ffffff;
+   color: #444;
+   margin: 1em;
+   padding: 1em 2em;
+}*/
+
 /* MEDIA QUERIES BEGIN HERE*/
 
 @media screen and (min-width: 550px) {
