--- a/views/aboutme.erb
+++ b/views/aboutme.erb
@@ -1,14 +1,17 @@
-  <section>
-    <h2>Hi. I'm Kate. Nice to meet you.</h2>
-    <p>A developer-in-training, I'm currently a student in
-      <a href="http://adadevelopersacademy.org/" target="blank">Ada Developers
-        Academy's</a> Cohort[1].
-        Before that I was a multimedia producer at
-        <a href="http://www.pbs.org/">PBS</a> where I learned many animal factoids
-        while working on my primary property <em>Nature</em>.
-        I like doing things on computers.
-        I also like doing a lot of other things.
-        Here are a few: </p>
-    <div><a href="mailto:katesuzannefulton@gmail.com">Email me.</a>
-      <a href="https://twitter.com/kate_fulton">Follow me.</a></div>
+<section>
+  <h2>Hi. I'm Kate. Nice to meet you.</h2>
+  <p>A developer-in-training, I'm currently a student in
+    <a href="http://adadevelopersacademy.org/" target="blank">Ada Developers
+      Academy's</a> Cohort[1].
+      Before that I was a multimedia producer at
+      <a href="http://www.pbs.org/">PBS</a> where I learned countless animal factoids
+      while working on my primary property <em>Nature</em>.
+      I like doing things on computers.
+      I also like doing a lot of other things:
+      filling in crossword puzzles, making ice cream sundaes, and
+      playing board games.
+
+
+  <div class="contact"><a href="mailto:katesuzannefulton@gmail.com">Email me.</a>
+    <a href="https://twitter.com/kate_fulton">Follow me.</a></div>
   </section>
