--- a/views/index.erb
+++ b/views/index.erb
@@ -11,8 +11,9 @@
 
 
   <section class="home_image home">
-    <!--<section class="star"><img src="/images/green_star_white.png" alt="star"></section>-->
-    <section class="laptop"><img src="/images/black_laptop_white.png" alt="computer"></section>
+    <section class="laptop">
+      <img src="/images/black_laptop_white.png" alt="computer">
+    </section>
   </section>
 
   <section class="blog_list home">
