--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,7 +5,6 @@
     <link href='http://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/css/resets.css" type="text/css" />
     <link rel="stylesheet" href="/css/blog.css" type="text/css" />
-    <script src="/js/blog.js"></script>
     <title>Kate's Ada Blog</title>
   </head>
   <body>
@@ -30,4 +29,6 @@
           <a href="http://adadevelopersacademy.org/" target="blank">ADA</a></li>
     </footer>
   </body>
+    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <script src="/js/blog.js" type="text/javascript"></script>
 </html>
