Change blog image treatment at breakpoint. Create caption overlay for blog images.

--- a/views/posts/2014-09-25/An_Instance_of_a_Class.erb
+++ b/views/posts/2014-09-25/An_Instance_of_a_Class.erb
@@ -5,6 +5,5 @@
     <section id="post_excerpt">
         Photo booth beard try-hard ullamco Austin normcore eiusmod, qui ennui pickled whatever. Brunch twee Thundercats, single-origin coffee delectus shabby chic Brooklyn dolore Tumblr. Enim est PBR&B roof party Godard. Cliche narwhal paleo mumblecore, occaecat kitsch fixie quis nisi. Mixtape sriracha letterpress PBR. Adipisicing fixie Williamsburg incididunt sint gentrify church-key odio, Cosby sweater quinoa shabby chic esse. Yr fixie scenester, Schlitz aute placeat meggings.</section>
 
-    <section><img src="/images/adalovelace.jpg" alt="Ada Lovelace">
-    <div class="caption">Ada Lovelace</div></section>
+    <section class="blog_image"><img src="/images/adalovelace.jpg" alt="Ada Lovelace"><div class="caption">Ada Lovelace</div></section>
 </article>
