--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -98,6 +98,7 @@ a:active {
   margin: 1em 0 0 1em;
 }
 
+
 .home_image {
   margin: 0 0 3em 8em;
   width: 175px;
@@ -120,6 +121,14 @@ blockquote footer {
   font-weight: bold;
 }
 
+.blog_image {
+  display: block;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+}
+
 section img {
    background: #e9e9e9;
    margin-top: 1.5em;
@@ -127,12 +136,16 @@ section img {
 }
 
 .caption {
-  font-size: .75em;
+  font-size: 1em;
   color: #8aff00;
-  margin-bottom: 1.5em;
   background-color: #444;
-  margin-right: 40%;
-  padding: .5em;
+  bottom: .35em;
+  left: 0;
+  right: 10em;
+  opacity: .8;
+  padding: 1em;
+  position: absolute;
+  display: block;
 }
 
 .byline {
@@ -160,8 +173,8 @@ section img {
 }
 
 .full_table {
-  width: 100%;
-  margin: 2em 0 2em 0;
+  width: 80%;
+  margin: auto;
 }
 
 .table-header {
@@ -186,12 +199,6 @@ td {
   font-weight: bold;
   text-align: right;
 }
-
-/*
-.table:after {
-  clear:both;
-}
-*/
 
 .hide {
   display:none;
@@ -225,5 +232,12 @@ td {
 
   .footer {
     clear: both;
+  }
+
+  .blog_image {
+    display: block;
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
