--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -132,6 +132,7 @@ blockquote footer {
 section img {
    background: #e9e9e9;
    margin-top: 1.5em;
+   margin-bottom: 1.5em;
    width: 100%;
 }
 
@@ -139,7 +140,7 @@ section img {
   font-size: 1em;
   color: #8aff00;
   background-color: #444;
-  bottom: .35em;
+  bottom: 3em;
   left: 0;
   right: 10em;
   opacity: .8;
