--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,6 +5,7 @@
     <link href='http://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/css/resets.css" type="text/css" />
     <link rel="stylesheet" href="/css/blog.css" type="text/css" />
+
     <title>Kate's Ada Blog</title>
   </head>
   <body>
@@ -28,7 +29,9 @@
         <li>Built with the power of
           <a href="http://adadevelopersacademy.org/" target="blank">ADA</a></li>
     </footer>
-  </body>
-    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+
+    <script src="/js/jquery-2.1.1.min.js"></script>
     <script src="/js/blog.js" type="text/javascript"></script>
+
+  </body>
 </html>
